--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+GPLv2
+Modifying Elle to work with Linux Mint 13.
 
 ------------------------------------------------------------------
 INSTALLATION NOTES for ELLE
